--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 data_wrangling_json/.ipynb_checkpoints/sliderule_dsi_json_exercise-checkpoint.ipynb
 data_wrangling_json/.ipynb_checkpoints/sliderule_dsi_xml_exercise-checkpoint.ipynb
 data_wrangling_xml/.ipynb_checkpoints/sliderule_dsi_xml_exercise-checkpoint.ipynb
+pre-capstone/.ipynb_checkpoints/NY_City-checkpoint.ipynb
+pre-capstone/DOHMH_New_York_City_Restaurant_Inspection_Results.csv
+*.csv
