--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ pre-capstone/DOHMH_New_York_City_Restaurant_Inspection_Results.csv
 capstone/.ipynb_checkpoints/proposal-checkpoint.ipynb
 pre-capstone/boston_data/yelp_academic_dataset_business.json
 *.json
+capstone/.ipynb_checkpoints/datastory-checkpoint.ipynb
