--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ capstone/.ipynb_checkpoints/proposal-checkpoint.ipynb
 pre-capstone/boston_data/yelp_academic_dataset_business.json
 *.json
 capstone/.ipynb_checkpoints/datastory-checkpoint.ipynb
+datastory.pdf
+pre-capstone/.ipynb_checkpoints/NY_State-checkpoint.ipynb
