Complete Inferential Stats Exercise 1

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ pre-capstone/boston_data/yelp_academic_dataset_business.json
 capstone/.ipynb_checkpoints/datastory-checkpoint.ipynb
 datastory.pdf
 pre-capstone/.ipynb_checkpoints/NY_State-checkpoint.ipynb
+statistics project 1/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
