Complete Stats Exercise 2

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ capstone/.ipynb_checkpoints/datastory-checkpoint.ipynb
 datastory.pdf
 pre-capstone/.ipynb_checkpoints/NY_State-checkpoint.ipynb
 statistics project 1/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
+statistics_project_1/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
+statistics_project_2/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_2-checkpoint.ipynb
