--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ pre-capstone/.ipynb_checkpoints/NY_State-checkpoint.ipynb
 statistics project 1/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
 statistics_project_1/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
 statistics_project_2/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_2-checkpoint.ipynb
+statistics_project_3/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_3-checkpoint.ipynb
