Make some minor edits

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ statistics project 1/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exe
 statistics_project_1/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_1-checkpoint.ipynb
 statistics_project_2/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_2-checkpoint.ipynb
 statistics_project_3/.ipynb_checkpoints/sliderule_dsi_inferential_statistics_exercise_3-checkpoint.ipynb
+capstone/.ipynb_checkpoints/milestone-checkpoint.ipynb
+capstone/.ipynb_checkpoints/milestone_alt-checkpoint.ipynb
+capstone/.ipynb_checkpoints/milestone_alt-checkpoint.ipynb
+capstone/.ipynb_checkpoints/pre-milestone-checkpoint.ipynb
+capstone/.ipynb_checkpoints/milestone_alt2-checkpoint.ipynb
