Exploration toward the Capstone Milestone Report

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ capstone/.ipynb_checkpoints/milestone_alt-checkpoint.ipynb
 capstone/.ipynb_checkpoints/milestone_alt-checkpoint.ipynb
 capstone/.ipynb_checkpoints/pre-milestone-checkpoint.ipynb
 capstone/.ipynb_checkpoints/milestone_alt2-checkpoint.ipynb
+capstone/.ipynb_checkpoints/milestone_alt2-checkpoint.ipynb
